fixed postgresql table problem